src/Weather.css
.Weather {
  border: 1px solid #dadde1;
  font-family: Arial, sans-serif;
  padding: 16px;
  border-radius: 4px;
  color: rgb(135, 135, 135);
}

.Weather h1 {
  color: #878787;
  display: block;
  font-size: 24px;
  font-weight: 100;
  margin: 20px 0 0 0;
  height: 28px;
  line-height: 29px;
}

.Weather ul {
  margin: 0;
  padding: 0;
}

.Weather li {
  font-size: 16px;
  font-weight: 100;
  line-height: 19px;
  list-style: none;
}

.Weather canvas {
  margin-right: 10px;
  margin-top: 5px;
  display: inline-block;
}

.Weather .temperature {
  font-weight: bold;
  color: rgb(33, 33, 33);
  font-size: 64px;
  line-height: 50px;
  font-weight: 300;
}

.Weather .unit {
  color: rgb(33, 33, 33);
  font-size: 16px;
  font-weight: 400;
  position: relative;
  line-height: 1;
  top: -34px;
  margin-left: 5px;
}

